[package]
name = "pace"
version = "0.1.0"
edition = "2021"

[dependencies]
pingora = { git = "https://github.com/cloudflare/pingora.git", branch = "main" }
pingora-core = { git = "https://github.com/cloudflare/pingora.git", branch = "main" }
pingora-proxy = { git = "https://github.com/cloudflare/pingora.git", branch = "main" }
pingora-load-balancing = { git = "https://github.com/cloudflare/pingora.git", branch = "main" }
pingora-http = { git = "https://github.com/cloudflare/pingora.git", branch = "main" }
pingora-limits = { git = "https://github.com/cloudflare/pingora.git", branch = "main" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
log = "0.4"
env_logger = "0.11"
prometheus = "0.13"
async-trait = "0.1"
once_cell = "1.19"
http = "1.0"

[profile.release]
opt-level = 3
lto = true
